--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://odedararanjeet1362:QJnw1khXE9ly@ep-royal-water-a5yjcpjj-pooler.us-east-2.aws.neon.tech/meduim?sslmode=require"
-MAIL_HOST = smtp.gmail.com
-MAIL_USER = codehelpdummy1@gmail.com
+MAIL_HOST = sandbox.smtp.mailtrap.io
+MAIL_USER = c648c11a6684b5
+RESEND_API_KEY=re_AookVtH5_8eTzH8fkmDiXTKxHRom2KzUT
+MAIL_PASS=aca12d3863dd80
